--- a/signup.css
+++ b/signup.css
@@ -47,6 +47,7 @@
     color: #2C3E50;
 }
 
+
 #btn
 {
     top: 0;
@@ -54,10 +55,9 @@
     position: absolute;
     width: 110px;
     height: 100%;
-    background: rgba(255, 255, 255, 0.3);
+    background: transparent;
     border-radius: 30px;
     transition: .5s;
-    z-index: 0;
 }
 
 .input-group-login
